--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="quote" id="slide-3" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="vcenter" id="slide-3" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
     <p><q>即便知道資料在哪，可是資料還是如同<code>一盤散沙</code></q></p>
@@ -552,12 +552,6 @@ GDP_part2 = filter(GDP_part1,y&gt;4&amp;y&lt;137)
 <li>利用<code>colnames</code>，改變欄位名稱</li>
 </ol>
 
-<div style='float:left;width:48%;'>
-
-</div>
-  <div style='float:right;width:48%;'>
-
-</div>
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -606,7 +600,7 @@ GDP_part5 = select(GDP_part4,year,season,GDP)
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="quote" id="slide-32" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="vcenter" id="slide-32" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
     <p><q>擁有了<code>GDP</code>和<code>房貸餘額</code>，那接下來我們該怎麼處理變成後續可以使用的資料呢？</a></p>
@@ -665,7 +659,7 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="quote" id="slide-35" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="vcenter" id="slide-35" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
     <p><q>group by 可加先下也可不下，不下的情況是直對接<code>全部</code>資料做集匯總運算 </q></p>
@@ -708,7 +702,7 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="segue" id="slide-38" style="background:red; background-repeat:no-repeat; background-position:center; ">
+<slide class="vcenter" id="slide-38" style="background:red; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>接下來比較難，真的!!!!</h2>
