--- a/index.html
+++ b/index.html
@@ -708,16 +708,17 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-38">
-<img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
-<hgroup>
-  <h2>接下來比較難，真的!!!!</h2>
-</hgroup>
-<article class = 'flexbox vcenter'>
-
-</article>
-<!-- Presenter Notes -->
+<slide class="segue" id="slide-38" style="background:red; background-repeat:no-repeat; background-position:center; ">
+  <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>接下來比較難，真的!!!!</h2>
+  </hgroup>
+  <article data-timings="">
+    
+  </article>
+  <!-- Presenter Notes -->
 </slide>
+
 <slide class="" id="slide-39" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
@@ -1057,24 +1058,13 @@ ggplot(see1, aes(time, ratio)) +
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-50" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="twocol" id="slide-50" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>接下來我們應該做 - 報告</h2>
   </hgroup>
   <article data-timings="">
     
-<div style='float:left;width:48%;'>
-<ol>
-<li>畫圖</li>
-<li>解釋</li>
-<li>報告</li>
-</ol>
-
-</div>
-  <div style='float:right;width:48%;'>
-
-</div>
   </article>
   <!-- Presenter Notes -->
 </slide>
