--- a/index.html
+++ b/index.html
@@ -1026,13 +1026,34 @@ ggplot(see1, aes(time, ratio)) +
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="twocol" id="slide-49" style="background:; background-repeat:no-repeat; background-position:center; ">
+<slide class="" id="slide-49" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
     <h2>接下來我們應該做 - 解釋</h2>
   </hgroup>
   <article data-timings="">
     
+<div style='float:left;width:48%;'>
+<ol>
+<li>畫圖</li>
+<li>解釋</li>
+</ol>
+
+</div>
+  <div style='float:right;width:48%;'>
+<ol>
+<li>09達到高峰，但之後房貸與GDP的比值平穩維持在37.5%</li>
+<li>GDP成長比率與房貸餘額幾乎成正比</li>
+<li>從新聞顯示
+
+<ul>
+<li>09年遺產稅調降, 許多人回來<code>投資</code>?<code>炒房</code>?</li>
+<li>10年開始打房政策</li>
+<li>如果加上<code>房價所得比</code>，還可以說什麼呢?</li>
+</ul></li>
+</ol>
+
+</div>
   </article>
   <!-- Presenter Notes -->
 </slide>
