--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ View(Cl_info)
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
     <p><q></q>
-<img src = './resources/figures/R_ETL_2.svg' ></img></p>
+<img src = './resources/figures/R_ETL_2.png' ></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -493,7 +493,7 @@ View(Cl_info)
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <article data-timings="">
     <p><q></q>
-<img src = './resources/figures/R_ETL_2.svg' ></img></p>
+<img src = './resources/figures/R_ETL_2.png' ></img></p>
 
 <h3>好亂，我想<code>整理</code>好這個data frome</h3>
 
@@ -524,7 +524,7 @@ View(Cl_info)
 
 </div>
   <div style='float:right;width:48%;'>
-<iframe src = './resources/figures/R_ETL_1.svg' height='600px'></iframe>
+<iframe src = './resources/figures/R_ETL_1.png' height='600px'></iframe>
 
 </div>
   </article>
@@ -798,7 +798,7 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6),
 
 </div>
   <div style='float:right;width:48%;'>
-<p><img src="./resources/figures/R_ETL_x.svg" ></img></p>
+<p><img src="./resources/figures/R_ETL_x.png" ></img></p>
 
 </div>
   </article>
@@ -819,7 +819,7 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6),
 ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
 </code></pre>
 
-<p><img src="./resources/figures/R_ETL_LJXY.svg" style="height:400px"></img></p>
+<p><img src="./resources/figures/R_ETL_LJXY.png" style="height:400px"></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -872,7 +872,7 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
   <!-- Presenter Notes -->
   <aside class="note" id="">
     <section>
-      <p><img src="./resources/figures/R_ETL_x.svg" style="height:400px" ></img></p>
+      <p><img src="./resources/figures/R_ETL_x.png" style="height:400px" ></img></p>
 
     </section>
   </aside>
@@ -920,7 +920,7 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
   <!-- Presenter Notes -->
   <aside class="note" id="">
     <section>
-      <p><img src="./resources/figures/R_ETL_x.svg" style="height:400px" ></img></p>
+      <p><img src="./resources/figures/R_ETL_x.png" style="height:400px" ></img></p>
 
     </section>
   </aside>
@@ -934,7 +934,7 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
   <article data-timings="">
     <h3>請問，這兩張表該怎麼結合比較好?</h3>
 
-<p><img src="./resources/figures/R_ETL_TWOTABLES.svg" style="height:400px" ></img></p>
+<p><img src="./resources/figures/R_ETL_TWOTABLES.png" style="height:400px" ></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -949,7 +949,7 @@ ljyx = left_join(y,x,by=&quot;c1&quot;) #以Y為主
     
 <div class='row-fluid'>
   <div class='span6'>
-    <p><img src="./resources/figures/R_ETL_TWOTABLES.svg" style="height:400px" ></img></p>
+    <p><img src="./resources/figures/R_ETL_TWOTABLES.png" style="height:400px" ></img></p>
 
   </div>
   <div class='span6'>
@@ -992,7 +992,7 @@ t2 = filter(t1,is.na(mortage_total_bal)==FALSE)
 
 <p>看一下資料 <code>View(t2)</code></p>
 
-<p><img src="./resources/figures/R_ETL_t2.svg" style="height:200px" ></img></p>
+<p><img src="./resources/figures/R_ETL_t2.png" style="height:200px" ></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -1007,7 +1007,7 @@ t2 = filter(t1,is.na(mortage_total_bal)==FALSE)
       
 <div style='float:left;width:18%' class='centered'>
  <ol>
-<li>畫圖</li>
+<li><code>畫圖</code></li>
 </ol>
 
 </div>    
@@ -1036,7 +1036,7 @@ ggplot(see1, aes(time, ratio)) +
 <div style='float:left;width:18%' class='centered'>
  <ol>
 <li>畫圖</li>
-<li>解釋</li>
+<li><code>解釋</code></li>
 </ol>
 
 </div>    
@@ -1069,7 +1069,7 @@ ggplot(see1, aes(time, ratio)) +
  <ol>
 <li>畫圖</li>
 <li>解釋</li>
-<li>報告</li>
+<li><code>報告</code></li>
 </ol>
 
 </div>    
