--- a/index.html
+++ b/index.html
@@ -782,23 +782,21 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6),
     <h2>join講解前資料準備</h2>
   </hgroup>
   <article data-timings="">
-    
-<div style='float:left;width:48%;'>
-<h3>接下來先從各類join開始說明</h3>
+      
+<div style='float:left;width:80%' class='centered'>
+ <h3>接下來先從各類join開始說明</h3>
 
 <p>先<code>建立資料集</code></p>
 
-<pre><code>x=data.frame(c1 = c(1,1,2,3,4,5,5),
-  c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
-y=data.frame(c1 = c(1,2,2,3,4,6,6), 
-  c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
+<pre><code>x=data.frame(c1 = c(1,1,2,3,4,5,5),c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
+y=data.frame(c1 = c(1,2,2,3,4,6,6), c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
 </code></pre>
 
 <p>打入 <code>View(x)</code>與<code>View(y)</code>應該會看見</p>
 
-</div>
-  <div style='float:right;width:48%;'>
-<p><img src="./resources/figures/R_ETL_X.png" ></img></p>
+</div>    
+<div style='float:right;width:20%'>
+ <p><img src="./resources/figures/R_ETL_X.png" ></img></p>
 
 </div>
   </article>
