--- a/index.html
+++ b/index.html
@@ -755,19 +755,19 @@ GDP_part6 = summarise(group_by(GDP_part5,year),GDP=sum(GDP))
   </hgroup>
   <article data-timings="">
       
-<div style='float:left;width:78%' >
+<div style='float:left;width:68%' >
  <h3>接下來先從各類join開始說明</h3>
 
 <p>先<code>建立資料集</code></p>
 
-<pre><code>x=data.frame(c1 = c(1,1,2,3,4,5,5),c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
-y=data.frame(c1 = c(1,2,2,3,4,6,6), c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
+<pre><code>x=data.frame(c1 = c(1,1,2,3,4,5,5),
+             c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
+y=data.frame(c1 = c(1,2,2,3,4,6,6),
+             c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
 </code></pre>
 
-<p>打入 <code>View(x)</code>與<code>View(y)</code>應該會看見</p>
-
 </div>    
-<div style='float:right;width:18%'>
+<div style='float:right;width:28%'>
  
 </div>
   </article>
@@ -781,20 +781,22 @@ y=data.frame(c1 = c(1,2,2,3,4,6,6), c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&
   </hgroup>
   <article data-timings="">
       
-<div style='float:left;width:78%' >
+<div style='float:left;width:68%' >
  <h3>接下來先從各類join開始說明</h3>
 
 <p>先<code>建立資料集</code></p>
 
-<pre><code>x=data.frame(c1 = c(1,1,2,3,4,5,5),c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
-y=data.frame(c1 = c(1,2,2,3,4,6,6), c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
+<pre><code>x=data.frame(c1 = c(1,1,2,3,4,5,5),
+             c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
+y=data.frame(c1 = c(1,2,2,3,4,6,6),
+             c2 = c(&#39;A&#39;,&#39;B&#39;,&#39;C&#39;,&#39;D&#39;,&#39;E&#39;,&#39;F&#39;,&#39;G&#39;))
 </code></pre>
 
 <p>打入 <code>View(x)</code>與<code>View(y)</code>應該會看見</p>
 
 </div>    
-<div style='float:right;width:18%'>
- <p><img src="./resources/figures/R_ETL_X.png" ></img></p>
+<div style='float:right;width:28%'>
+ <p><img src="./resources/figures/R_ETL_X.png" width="100%"></img></p>
 
 </div>
   </article>
