--- a/index.html
+++ b/index.html
@@ -507,9 +507,9 @@ View(Cl_info)
     <h2>資料清理</h2>
   </hgroup>
   <article data-timings="">
-    
-<div style='float:left;width:48%;'>
-<h3>要處理的標的物有</h3>
+      
+<div style='float:left;width:40%' >
+ <h3>要處理的標的物有</h3>
 
 <ol>
 <li>去除前後不相干的資料列</li>
@@ -522,9 +522,9 @@ View(Cl_info)
 <li>抽離年份與季</li>
 </ol>
 
-</div>
-  <div style='float:right;width:48%;'>
-<iframe src = './resources/figures/R_ETL_1.png' height='500px'></iframe>
+</div>    
+<div style='float:right;width:60%'>
+ <iframe src = './resources/figures/R_ETL_1.png' ></iframe>
 
 </div>
   </article>
