--- a/index.html
+++ b/index.html
@@ -512,19 +512,19 @@ View(Cl_info)
  <h3>要處理的標的物有</h3>
 
 <ol>
-<li>去除前後不相干的資料列</li>
-<li>轉換某些欄位的格式
+<li>去除前後<code>不相干</code>的資料列</li>
+<li>轉換欄位的格式
 
 <ul>
 <li>將單位轉換，從<code>百萬元變成元</code></li>
 <li>將不應該出現的<code>,</code>去除</li>
 </ul></li>
-<li>抽離年份與季</li>
+<li>抽離<code>年份</code>與<code>季</code></li>
 </ol>
 
 </div>    
 <div style='float:right;width:58%'>
- <iframe src = './resources/figures/R_ETL_1.png' ></iframe>
+ <iframe src = './resources/figures/R_ETL_1.png' style="height:400px"></iframe>
 
 </div>
   </article>
