--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ View(Cl_info)
 
 </div>    
 <div style='float:right;width:58%'>
- <iframe src = './resources/figures/R_ETL_1.png' style="height:600px"></iframe>
+ <p><img src = './resources/figures/R_ETL_1.png' ></img></p>
 
 </div>
   </article>
