--- a/index.html
+++ b/index.html
@@ -1020,8 +1020,22 @@ ggplot(see1, aes(time, ratio)) +
 <p><img src="assets/fig/unnamed-chunk-7.png" alt="plot of chunk unnamed-chunk-7"> </p>
 
 </div>
+  <aside class="note" id="">
+    <section>
+      <pre><code>see1 = filter(mutate(t2,ratio =mortage_total_bal/GDP),is.na(ratio)==FALSE)
+</code></pre>
+
+    </section>
+  </aside>
   </article>
   <!-- Presenter Notes -->
+  <aside class="note" id="">
+    <section>
+      <pre><code>see1 = filter(mutate(t2,ratio =mortage_total_bal/GDP),is.na(ratio)==FALSE)
+</code></pre>
+
+    </section>
+  </aside>
 </slide>
 
 <slide class="" id="slide-49" style="background:; background-repeat:no-repeat; background-position:center; ">
