--- a/index.html
+++ b/index.html
@@ -1021,11 +1021,11 @@ ggplot(see1, aes(time, ratio)) +
 
 </div>
   <aside class="note" id="">
-    <section >
+    <section style='width:'>
       <pre><code>see1 = filter(mutate(t2,ratio =mortage_total_bal/GDP),is.na(ratio)==FALSE)
 </code></pre>
 
-    </section style='width:'>
+    </section >
   </aside>
   </article>
   <!-- Presenter Notes -->
